fix(test-server): support Java 25 (Arrow Unsafe flag), not just 21-24 (#10)
assert-supported-jvm! blocked Java 25 claiming the server depends on
StructuredTaskScope$ShutdownOnFailure (a JEP-453 preview API). That was
wrong -- nothing on the classpath references it. The actual Java 25
blocker is XTDB's Arrow netty allocator: JEP 498 (JDK 24+) restricts
sun.misc.Unsafe memory access, so the node init dies in
org.apache.arrow.memory.netty.DefaultAllocationManagerFactory.<clinit>.

XTDB 2.2.0-beta1 itself is plain Java-21 bytecode (no preview features)
and runs on 21 through 25+, so this is purely a launch-flag concern:

- assert-supported-jvm! now enforces only the Java 21+ lower bound, and on
  Java 24+ fails fast with a clear message if
  --sun-misc-unsafe-memory-access=allow is missing (instead of a confusing
  Arrow trace). The flag is detected via RuntimeMXBean input args.
- The inferno runner detects the target Java major and adds
  -J--sun-misc-unsafe-memory-access=allow on 24+ (the flag is rejected on
  <= 23, so it is gated).

Verified: with the flag, the xtdb2-backed test-server boots on JDK 25 and
serves a valid CapabilityStatement (FHIR 4.0.1) over HTTP; the Arrow
netty 19.0.0 allocator initializes cleanly. Java 21 behaviour is
unchanged. (Inferno was already 505/0/0 on Java 21; FHIR behaviour is
JVM-version-independent.)

Co-authored-by: Claude Opus 4.8 (1M context) <noreply@anthropic.com>